--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
             </div>
             
           </div>
-          <label for="pixCode">ENDEREÇO</label>
-    <div class="copy-container">
-      <input type="text" id="pixCode" value="RUA ONDE MORO, NUMERO E BAIRRO" readonly>
-      <button id="copyButton" class="btn" onclick="copyText()">
-        Clique aqui
-      </button>
-    </div>
-    <div id="popup" class="popup">Endereço copiado!</div>
-          <div>
-            <a class="btn">Ir para meu presente</a>
+          <label for="pixCode">Copie esse endereço, você vai precisar...</label>
+          <div class="copy-container">
+            <input type="text" id="pixCode" value="RUA ONDE MORO, NUMERO E BAIRRO" readonly>
+          </div>
+          <div class="centralizada">
+            <button id="copyButton" class="button_Copiar" onclick="copyText()">
+              Copiar
+            </button>
+          </div>
+          <div id="popup" class="popup">Endereço copiado!</div>
+          <div class="centralizada">
+            <button class="btn">Ir para meu presente</button>
           </div>
         </div>
       </section>
