--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </button>
           </div>
           <div id="popup" class="popup">Endereço copiado!</div>
-          <div class="centralizada">
+          <div class="centralizada" onclick="window.open('https://open.spotify.com', '_blank')">
             <button class="btn">Ir para meu presente</button>
           </div>
         </div>
