fix: link redirect

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <label for="pixCode">Copie esse endereço, você vai precisar...</label>
           <div class="copy-container">
-            <input type="text" id="pixCode" value="RUA ONDE MORO, NUMERO E BAIRRO" readonly>
+            <input type="text" id="pixCode" value="Av. Eliezer Magalhaes - Santa Casa, Mirassol - SP, 15130-000, Brazil" readonly>
           </div>
           <div class="centralizada">
             <button id="copyButton" class="button_Copiar" onclick="copyText()">
@@ -53,7 +53,7 @@
             </button>
           </div>
           <div id="popup" class="popup">Endereço copiado!</div>
-          <div class="centralizada" onclick="window.open('https://open.spotify.com', '_blank')">
+          <div class="centralizada" onclick="window.open('https://www.spotify.com/br-pt/family/join/invite/9yCy76ZABc2y5Z3', '_blank')">
             <button class="btn">Ir para meu presente</button>
           </div>
         </div>
