--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- @@@@@@@@@@@@@@@@@@@ pre loader @@@@@@@@@@@@@@@@@@@@ -->
     <div class="preloader" id="preloader">
-      <img src="./assets/img/bolasNatal.png" alt="" class="preloader__img" />
+      <img src="./assets/img/balao.png" alt="" class="preloader__img" />
     </div>
     <div id="snow-container"></div>
     <main>
@@ -29,15 +29,15 @@
       <section class="home" id="home">
         <div class="container">
           <div class="home__container">
-            <img src="./assets/img/taca.png" alt="" class="home__img" />
+            <img src="./assets/img/presente.png" alt="" class="home__img" />
 
             <div class="home__data">
               <h1 class="home__title">
-                Feliz Ano Novo,<br />
+                Feliz Aniversário,<br />
                 Mariana!
               </h1>
               <p class="home__description">
-                Que o Ano Novo traga novas conquistas, sonhos realizados e momentos inesquecíveis ao lado de quem amamos. Feliz 2025!
+                Que seu aniversário seja repleto de alegria, amor e momentos inesquecíveis! Parabéns pelo seu dia especial! 🎉🎂✨
               </p>
               
             </div>
